[tool.poetry]
name = "api-flask-python"
version = "0.1.0"
description = ""
authors = ["Luis Corales <lcorales@stackbuilders.com>"]
readme = "README.md"
packages = [{include = "api_flask_python"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.3"
flask-restful = "^0.3.9"
pre-commit = "^3.0.4"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
